--- a/SvgToXaml/MainWindow.xaml
+++ b/SvgToXaml/MainWindow.xaml
@@ -1,17 +1,19 @@
-﻿<Window x:Class="SvgToXaml.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:explorer="clr-namespace:SvgToXaml.Explorer"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:viewModels="clr-namespace:SvgToXaml.ViewModels"
-        xmlns:wrapPanel="clr-namespace:SvgToXaml.WrapPanel"
-        mc:Ignorable="d" 
-        Title="SvgToXaml   © 2015 Bernd Klaiber" Height="350" Width="525"
-        AllowDrop="True"
-        Drop="MainWindow_OnDrop"
-        Icon="icon.ico"
-        d:DataContext="{x:Static viewModels:SvgImagesViewModel.DesignInstance}">
+﻿<Window
+    x:Class="SvgToXaml.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:explorer="clr-namespace:SvgToXaml.Explorer"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModels="clr-namespace:SvgToXaml.ViewModels"
+    xmlns:wrapPanel="clr-namespace:SvgToXaml.WrapPanel"
+    Title="SvgToXaml   © 2015 Bernd Klaiber"
+    d:DataContext="{x:Static viewModels:SvgImagesViewModel.DesignInstance}"
+    AllowDrop="True"
+    Drop="MainWindow_OnDrop"
+    Icon="icon.ico"
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d">
     <Window.Resources>
         <DrawingImage x:Key="SaveDrawingImage">
             <DrawingImage.Drawing>
@@ -23,54 +25,105 @@
     </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="169*"/>
-            <ColumnDefinition Width="3"></ColumnDefinition>
-            <ColumnDefinition Width="348*"/>
+            <ColumnDefinition Width="0.05*" />
+            <ColumnDefinition Width="3" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="25"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="25" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <DockPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3">
-            <Button DockPanel.Dock="Right" Width="20" Margin="1,3" Command="{Binding InfoCommand}" TabIndex="2" ToolTip="Info">i</Button>
-            <Slider x:Name="Slider" Orientation="Horizontal" DockPanel.Dock="Right" Minimum="16" Maximum="500" Value="96" 
-                        LargeChange="8" SmallChange="2" Width="100" VerticalAlignment="Center"/>
-            <Button DockPanel.Dock="Right" Width="20" Margin="1,3" Command="{Binding ExportDirCommand}" TabIndex="2" ToolTip="Export all Svgs to a Xaml">
+        <DockPanel
+            Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="3">
+            <Button
+                MinWidth="36"
+                Margin="1,3"
+                Padding="4,0"
+                Command="{Binding ToggleBackgroundCommand}"
+                Content="{Binding BackgroundLabel}"
+                DockPanel.Dock="Right"
+                ToolTip="切換預覽背景（深灰 / 淺灰 / 棋盤格）" />
+            <Slider
+                x:Name="Slider"
+                Width="100"
+                VerticalAlignment="Center"
+                DockPanel.Dock="Right"
+                LargeChange="8"
+                Maximum="500"
+                Minimum="16"
+                Orientation="Horizontal"
+                SmallChange="2"
+                Value="96" />
+            <Button
+                Width="20"
+                Margin="1,3"
+                Command="{Binding ExportDirCommand}"
+                DockPanel.Dock="Right"
+                TabIndex="2"
+                ToolTip="Export all Svgs to a Xaml">
                 <Image Source="{StaticResource SaveDrawingImage}" />
             </Button>
-            <Button DockPanel.Dock="Right" Width="20" Margin="1,3" Command="{Binding OpenFolderCommand}" TabIndex="2" ToolTip="Open Folder">...</Button>
-            <TextBox Margin="3" Text="{Binding CurrentDir, Mode=TwoWay}" TabIndex="1"/>
+            <Button
+                Width="20"
+                Margin="1,3"
+                Command="{Binding OpenFolderCommand}"
+                DockPanel.Dock="Right"
+                TabIndex="2"
+                ToolTip="Open Folder">
+                ...
+            </Button>
+            <TextBox
+                Margin="3"
+                TabIndex="1"
+                Text="{Binding CurrentDir, Mode=TwoWay}" />
         </DockPanel>
-        <explorer:FolderTree x:Name="FolderTree" Grid.Row="1" Grid.Column="0" CurrentFolder="{Binding CurrentDir, Mode=TwoWay}" TabIndex="3" ContextMenuCommands="{Binding ContextMenuCommands}"></explorer:FolderTree>
-        <GridSplitter Grid.Column="1" Grid.Row="1" ResizeDirection="Columns" ResizeBehavior="PreviousAndNext" Width="3"></GridSplitter>
+        <explorer:FolderTree
+            x:Name="FolderTree"
+            Grid.Row="1"
+            Grid.Column="0"
+            ContextMenuCommands="{Binding ContextMenuCommands}"
+            CurrentFolder="{Binding CurrentDir, Mode=TwoWay}"
+            TabIndex="3" />
+        <GridSplitter
+            Grid.Row="1"
+            Grid.Column="1"
+            Width="3"
+            ResizeBehavior="PreviousAndNext"
+            ResizeDirection="Columns" />
         <Grid Grid.Row="1" Grid.Column="2">
             <Grid.RowDefinitions>
-                <RowDefinition Height="212*"/>
-                <RowDefinition Height="25"/>
+                <RowDefinition Height="212*" />
+                <RowDefinition Height="25" />
             </Grid.RowDefinitions>
-            <ListBox Grid.Row="0" 
-                     SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
-                     SelectionMode="Single"
-                     ItemsSource="{Binding Images}" 
-                     ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+            <ListBox
+                Grid.Row="0"
+                Background="{Binding PreviewBackgroundBrush}"
+                ItemsSource="{Binding Images}"
+                ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
+                SelectionMode="Single">
                 <ListBox.ItemsPanel>
                     <ItemsPanelTemplate>
                         <!--<WrapPanel Orientation="Horizontal"/>-->
-                        <wrapPanel:VirtualizingWrapPanel ItemWidth="{Binding ElementName=Slider, Path=Value}" ItemHeight="{Binding ElementName=Slider, Path=Value}">
-
-                        </wrapPanel:VirtualizingWrapPanel>
+                        <wrapPanel:VirtualizingWrapPanel ItemHeight="{Binding ElementName=Slider, Path=Value}" ItemWidth="{Binding ElementName=Slider, Path=Value}" />
                     </ItemsPanelTemplate>
                 </ListBox.ItemsPanel>
                 <ListBox.ItemContainerStyle>
                     <Style TargetType="ListBoxItem">
-                        <Setter Property="Padding" Value="0"/>
+                        <Setter Property="Padding" Value="0" />
+                        <Setter Property="Background" Value="Transparent" />
                     </Style>
                 </ListBox.ItemContainerStyle>
                 <ListBox.ItemTemplate>
                     <DataTemplate DataType="{x:Type viewModels:ImageBaseViewModel}">
-                        <Border x:Name="GraphicBorder" BorderThickness="1" BorderBrush="MediumBlue">
-                            <!--don't set, use automatic: Width="{Binding Path='ActualWidth', ElementName='Bd'}" Height="{Binding Path='ActualHeight', ElementName='Bd'}"-->
-                            <Grid  ToolTip="{Binding Filename}">
+                        <Border
+                            x:Name="GraphicBorder"
+                            BorderBrush="MediumBlue"
+                            BorderThickness="1">
+                            <!--  don't set, use automatic: Width="{Binding Path='ActualWidth', ElementName='Bd'}" Height="{Binding Path='ActualHeight', ElementName='Bd'}"  -->
+                            <Grid ToolTip="{Binding Filename}">
                                 <!--<Button Style="{StaticResource FlatButton}">
                                 <Image Source="{Binding PreviewSource}"></Image>
                                 <Button.InputBindings>
@@ -78,26 +131,32 @@
                                 </Button.InputBindings>
                             </Button>-->
 
-                                <Image Source="{Binding PreviewSource}" VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <Image
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Source="{Binding PreviewSource}">
                                     <Image.InputBindings>
-                                        <MouseBinding Gesture="LeftDoubleClick" Command="{Binding OpenDetailCommand}" />
+                                        <MouseBinding Command="{Binding OpenDetailCommand}" Gesture="LeftDoubleClick" />
                                     </Image.InputBindings>
                                 </Image>
                                 <Grid.ContextMenu>
                                     <ContextMenu>
                                         <ContextMenu.ItemsPanel>
                                             <ItemsPanelTemplate>
-                                                <StackPanel Background="{x:Static SystemColors.MenuBarBrush}"/>
+                                                <StackPanel Background="{x:Static SystemColors.MenuBarBrush}" />
                                             </ItemsPanelTemplate>
                                         </ContextMenu.ItemsPanel>
-                                        <MenuItem Header="Open File" Command="{Binding OpenFileCommand}" Padding="-20,2,-15,2"/>
+                                        <MenuItem
+                                            Padding="-20,2,-15,2"
+                                            Command="{Binding OpenFileCommand}"
+                                            Header="Open File" />
                                     </ContextMenu>
                                 </Grid.ContextMenu>
                             </Grid>
                         </Border>
                         <DataTemplate.Triggers>
                             <DataTrigger Binding="{Binding HasSvg}" Value="true">
-                                <Setter TargetName="GraphicBorder" Property="BorderThickness" Value="0"/>
+                                <Setter TargetName="GraphicBorder" Property="BorderThickness" Value="0" />
                             </DataTrigger>
                         </DataTemplate.Triggers>
                     </DataTemplate>
@@ -106,8 +165,18 @@
             <DockPanel Grid.Row="1">
                 <Grid DockPanel.Dock="Bottom">
                     <DockPanel Grid.Row="0">
-                        <Button DockPanel.Dock="Right" Width="20" Margin="1,3" Command="{Binding OpenFileCommand}" ToolTip="Open File">...</Button>
-                        <TextBox IsReadOnly="True" Margin="2,3" Text="{Binding SelectedItem.Filepath, Mode=OneWay}"></TextBox>
+                        <Button
+                            Width="20"
+                            Margin="1,3"
+                            Command="{Binding OpenFileCommand}"
+                            DockPanel.Dock="Right"
+                            ToolTip="Open File">
+                            ...
+                        </Button>
+                        <TextBox
+                            Margin="2,3"
+                            IsReadOnly="True"
+                            Text="{Binding SelectedItem.Filepath, Mode=OneWay}" />
                     </DockPanel>
                 </Grid>
             </DockPanel>
