--- a/SvgToXaml/MainWindow.xaml
+++ b/SvgToXaml/MainWindow.xaml
@@ -136,7 +136,7 @@
                                     VerticalAlignment="Center"
                                     Source="{Binding PreviewSource}">
                                     <Image.InputBindings>
-                                        <MouseBinding Command="{Binding OpenDetailCommand}" Gesture="LeftDoubleClick" />
+                                        <MouseBinding Command="{Binding CopyXamlCommand}" Gesture="LeftDoubleClick" />
                                     </Image.InputBindings>
                                 </Image>
                                 <Grid.ContextMenu>
@@ -146,6 +146,14 @@
                                                 <StackPanel Background="{x:Static SystemColors.MenuBarBrush}" />
                                             </ItemsPanelTemplate>
                                         </ContextMenu.ItemsPanel>
+                                        <MenuItem
+                                            Padding="-20,2,-15,2"
+                                            Command="{Binding CopyXamlCommand}"
+                                            Header="複製 XAML" />
+                                        <MenuItem
+                                            Padding="-20,2,-15,2"
+                                            Command="{Binding OpenDetailCommand}"
+                                            Header="檢視詳細" />
                                         <MenuItem
                                             Padding="-20,2,-15,2"
                                             Command="{Binding OpenFileCommand}"
@@ -162,6 +170,24 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
+            <!--  Toast 通知  -->
+            <Border
+                x:Name="ToastBorder"
+                Grid.Row="0"
+                Margin="0,0,0,40"
+                Padding="16,8"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                Background="#CC333333"
+                CornerRadius="4"
+                IsHitTestVisible="False"
+                Opacity="0"
+                Panel.ZIndex="10">
+                <TextBlock
+                    FontSize="14"
+                    Foreground="White"
+                    Text="已複製到剪貼簿" />
+            </Border>
             <DockPanel Grid.Row="1">
                 <Grid DockPanel.Dock="Bottom">
                     <DockPanel Grid.Row="0">
