--- a/SvgToXaml/App.xaml
+++ b/SvgToXaml/App.xaml
@@ -1,9 +1,16 @@
-﻿<Application x:Class="SvgToXaml.App"
+<Application x:Class="SvgToXaml.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:infrastructure="clr-namespace:SvgToXaml.Infrastructure"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <infrastructure:InvertableBooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDark.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml" />
+                <ResourceDictionary Source="Themes/CustomStyles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+            <infrastructure:InvertableBooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
