--- a/SvgToXaml/DetailWindow.xaml
+++ b/SvgToXaml/DetailWindow.xaml
@@ -1,45 +1,54 @@
-﻿<Window x:Class="SvgToXaml.DetailWindow"
+<Window x:Class="SvgToXaml.DetailWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:viewModels="clr-namespace:SvgToXaml.ViewModels"
         xmlns:textViewer="clr-namespace:SvgToXaml.TextViewer"
-        mc:Ignorable="d" 
-        Title="{Binding Filename}" Height="375" Width="300"
+        mc:Ignorable="d"
+        Title="{Binding Filename}"
+        Height="380" Width="450"
+        Background="#FF252526"
+        FontFamily="Segoe UI"
+        Foreground="#FFCCCCCC"
         WindowStartupLocation="CenterOwner"
         d:DataContext="{x:Static viewModels:SvgImageViewModel.DesignInstance}">
-    <Grid>
-        <TabControl TabStripPlacement="Bottom">
-            <TabItem Header="View Image">
+    <Grid Margin="8">
+        <TabControl TabStripPlacement="Bottom" Background="Transparent" BorderThickness="0">
+            <TabItem Header="預覽">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
-                        <RowDefinition Height="30"/>
+                        <RowDefinition Height="36"/>
                     </Grid.RowDefinitions>
-                    <Border Grid.Row="0" BorderThickness="1" BorderBrush="#FF00008A" Margin="2">
-                        <Image x:Name="Image" Source="{Binding PreviewSource}" Stretch="Uniform">
+                    <Border Grid.Row="0"
+                            BorderThickness="1"
+                            BorderBrush="#FF555555"
+                            CornerRadius="4"
+                            Background="#FF333333"
+                            Margin="4">
+                        <Image x:Name="Image" Source="{Binding PreviewSource}" Stretch="Uniform" Margin="4">
                             <Image.InputBindings>
                                 <MouseBinding Gesture="LeftDoubleClick" Command="{Binding OpenDetailCommand}" />
                             </Image.InputBindings>
                         </Image>
                     </Border>
-                    <StackPanel Grid.Row="1" Orientation="Horizontal">
-                        <Grid HorizontalAlignment="Center" Width="80">
+                    <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <Grid HorizontalAlignment="Center" Width="100">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="*"/>
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
-                            <TextBlock Text="Designed" TextAlignment="Center" VerticalAlignment="Center"/>
-                            <TextBlock Grid.Row="1" TextAlignment="Center" VerticalAlignment="Center" Text="{Binding SvgDesignInfo}"/>
+                            <TextBlock Text="設計尺寸" TextAlignment="Center" VerticalAlignment="Center" Foreground="#FF888888" FontSize="10"/>
+                            <TextBlock Grid.Row="1" TextAlignment="Center" VerticalAlignment="Center" Foreground="#FFCCCCCC" FontSize="11" Text="{Binding SvgDesignInfo}"/>
                         </Grid>
-                        <Grid HorizontalAlignment="Center" Width="80">
+                        <Grid HorizontalAlignment="Center" Width="120">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="*"/>
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
-                            <TextBlock Text="Actual Size" TextAlignment="Center" VerticalAlignment="Center"/>
-                            <TextBlock Grid.Row="1" TextAlignment="Center" VerticalAlignment="Center">
+                            <TextBlock Text="實際尺寸" TextAlignment="Center" VerticalAlignment="Center" Foreground="#FF888888" FontSize="10"/>
+                            <TextBlock Grid.Row="1" TextAlignment="Center" VerticalAlignment="Center" Foreground="#FFCCCCCC" FontSize="11">
                                 <Run Text="{Binding ElementName=Image,Path=ActualWidth,Mode=OneWay,StringFormat={}{0:0.0}}"/>
                                 <Run Text="x"/>
                                 <Run Text="{Binding ElementName=Image,Path=ActualHeight,Mode=OneWay,StringFormat={}{0:0.0}}"/>
@@ -50,28 +59,25 @@
                                 <RowDefinition Height="*"/>
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
-                            <TextBlock Text="Stretch" Foreground="Blue" TextDecorations="Underline" TextAlignment="Center" VerticalAlignment="Center" MouseLeftButtonDown="ToggleStretchClicked"/>
-                            <TextBlock Grid.Row="1" TextAlignment="Center" VerticalAlignment="Center" Text="{Binding ElementName=Image, Path=Stretch}"/>
+                            <TextBlock Text="縮放模式" Foreground="#FF3794FF" TextDecorations="Underline" TextAlignment="Center" VerticalAlignment="Center" MouseLeftButtonDown="ToggleStretchClicked" Cursor="Hand" FontSize="10"/>
+                            <TextBlock Grid.Row="1" TextAlignment="Center" VerticalAlignment="Center" Foreground="#FFCCCCCC" FontSize="11" Text="{Binding ElementName=Image, Path=Stretch}"/>
                         </Grid>
                     </StackPanel>
                 </Grid>
             </TabItem>
-            <TabItem Header="Xaml" Visibility="{Binding HasXaml, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <TabItem Header="XAML" Visibility="{Binding HasXaml, Converter={StaticResource BooleanToVisibilityConverter}}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
-                        <RowDefinition Height="25"/>
+                        <RowDefinition Height="32"/>
                     </Grid.RowDefinitions>
-                    <textViewer:XmlViewer Grid.Row="0" x:Name="XmlViewer" FontFamily="Consolas" FontSize="10pt" Text="{Binding Xaml}">
-
-                    </textViewer:XmlViewer>
-                    <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Right">
-                        <Button Click="CopyToClipboardClick">Copy to Clipboard</Button>
+                    <textViewer:XmlViewer Grid.Row="0" x:Name="XmlViewer" FontFamily="Consolas" FontSize="10pt" Text="{Binding Xaml}" />
+                    <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Right" Margin="4">
+                        <Button Click="CopyToClipboardClick" Padding="12,4" Content="複製到剪貼簿" />
                     </StackPanel>
-
                 </Grid>
             </TabItem>
-            <TabItem Header="Svg" Visibility="{Binding HasSvg, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <TabItem Header="SVG" Visibility="{Binding HasSvg, Converter={StaticResource BooleanToVisibilityConverter}}">
                 <textViewer:XmlViewer FontFamily="Consolas" FontSize="10pt" Text="{Binding Svg}"/>
             </TabItem>
         </TabControl>
