--- a/SvgToXaml/Explorer/FolderTree.xaml
+++ b/SvgToXaml/Explorer/FolderTree.xaml
@@ -1,21 +1,49 @@
-﻿<UserControl x:Class="SvgToXaml.Explorer.FolderTree"
+<UserControl x:Class="SvgToXaml.Explorer.FolderTree"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:explorer="clr-namespace:SvgToXaml.Explorer"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <TreeView Grid.Column="0" x:Name="FoldersTree" BorderThickness="0">
+        <TreeView Grid.Column="0" x:Name="FoldersTree"
+                  BorderThickness="0"
+                  Background="Transparent"
+                  Padding="4,6">
+            <!-- Dark scrollbar TreeView template -->
+            <TreeView.Template>
+                <ControlTemplate TargetType="TreeView">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ScrollViewer Focusable="False"
+                                      CanContentScroll="False"
+                                      HorizontalScrollBarVisibility="Auto"
+                                      VerticalScrollBarVisibility="Auto"
+                                      Padding="{TemplateBinding Padding}"
+                                      Style="{StaticResource DarkScrollViewerStyle}">
+                            <ItemsPresenter />
+                        </ScrollViewer>
+                    </Border>
+                </ControlTemplate>
+            </TreeView.Template>
             <TreeView.Resources>
+                <!-- Override system selection colors for dark theme -->
+                <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#FF2D5F8A" />
+                <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="White" />
+                <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="#FF3F3F46" />
+                <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightTextBrushKey}" Color="#FFCCCCCC" />
+
                 <Style TargetType="{x:Type TreeViewItem}">
+                    <Setter Property="Foreground" Value="#FFCCCCCC" />
+                    <Setter Property="Padding" Value="2,1" />
                     <Setter Property="HeaderTemplate">
                         <Setter.Value>
                             <DataTemplate DataType="ContentPresenter">
-                                <StackPanel Orientation="Horizontal">
-                                    <Image Name="img" Width="20" Height="20" Stretch="Fill" />
-                                    <TextBlock Text="{Binding}" Margin="5,0" />
+                                <StackPanel Orientation="Horizontal" Margin="0,2">
+                                    <Image Name="img" Width="18" Height="18" Stretch="Fill" />
+                                    <TextBlock Text="{Binding}" Margin="6,0,0,0" VerticalAlignment="Center" FontSize="12.5" />
                                 </StackPanel>
 
                                 <DataTemplate.Triggers>
@@ -33,25 +61,29 @@
                     </Setter>
                     <Setter Property="ContextMenu">
                         <Setter.Value>
-                            <ContextMenu ItemsSource="{Binding ContextMenuCommands}">
-                                <ContextMenu.ItemsPanel>
-                                    <ItemsPanelTemplate>
-                                        <StackPanel Background="{x:Static SystemColors.MenuBarBrush}"/>
-                                    </ItemsPanelTemplate>
-                                </ContextMenu.ItemsPanel>
+                            <ContextMenu ItemsSource="{Binding ContextMenuCommands}"
+                                         Background="#FF2D2D30"
+                                         BorderBrush="#FF555555"
+                                         Foreground="#FFCCCCCC">
                                 <ContextMenu.Resources>
                                     <Style TargetType="MenuItem">
-                                        <Setter Property="Header" Value="{Binding Item1}"></Setter>
-                                        <Setter Property="Command" Value="{Binding Item2}"></Setter>
-                                        <Setter Property="CommandParameter" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type TreeViewItem}}, Path='Tag'}"></Setter>
-                                        <Setter Property="Padding" Value="-20,2,-15,2"></Setter>
+                                        <Setter Property="Header" Value="{Binding Item1}" />
+                                        <Setter Property="Command" Value="{Binding Item2}" />
+                                        <Setter Property="CommandParameter" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type TreeViewItem}}, Path='Tag'}" />
+                                        <Setter Property="Foreground" Value="#FFCCCCCC" />
+                                        <Setter Property="Padding" Value="10,6" />
                                     </Style>
                                 </ContextMenu.Resources>
                             </ContextMenu>
                         </Setter.Value>
                     </Setter>
+                    <Style.Triggers>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="Foreground" Value="White" />
+                        </Trigger>
+                    </Style.Triggers>
                 </Style>
             </TreeView.Resources>
-        </TreeView>    
+        </TreeView>
     </Grid>
 </UserControl>
