feat: Detail 視窗暗黑主題 + 動態置中大小 + README 中英雙語
- DetailWindow 套用暗黑主題：TabControl、TabItem、Button 樣式
- XmlViewer 暗黑配色 + VS Code 風格 XML 語法高亮
- Detail 視窗大小為主視窗 1/3 並置中顯示
- Copy to Clipboard 按鈕列加高避免文字被裁切
- README.md 新增繁體中文版本，頂部加入中英切換錨點連結

--- a/SvgToXaml/DetailWindow.xaml
+++ b/SvgToXaml/DetailWindow.xaml
@@ -7,15 +7,15 @@
         xmlns:textViewer="clr-namespace:SvgToXaml.TextViewer"
         mc:Ignorable="d"
         Title="{Binding Filename}"
-        Height="380" Width="450"
+        MinHeight="300" MinWidth="350"
         Background="#FF252526"
         FontFamily="Segoe UI"
         Foreground="#FFCCCCCC"
         WindowStartupLocation="CenterOwner"
         d:DataContext="{x:Static viewModels:SvgImageViewModel.DesignInstance}">
     <Grid Margin="8">
-        <TabControl TabStripPlacement="Bottom" Background="Transparent" BorderThickness="0">
-            <TabItem Header="{DynamicResource S.Tab.Preview}">
+        <TabControl TabStripPlacement="Bottom" Style="{StaticResource DarkTabControlStyle}">
+            <TabItem Header="{DynamicResource S.Tab.Preview}" Style="{StaticResource DarkTabItemStyle}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
@@ -65,19 +65,19 @@
                     </StackPanel>
                 </Grid>
             </TabItem>
-            <TabItem Header="XAML" Visibility="{Binding HasXaml, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <TabItem Header="XAML" Style="{StaticResource DarkTabItemStyle}" Visibility="{Binding HasXaml, Converter={StaticResource BooleanToVisibilityConverter}}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
-                        <RowDefinition Height="32"/>
+                        <RowDefinition Height="40"/>
                     </Grid.RowDefinitions>
                     <textViewer:XmlViewer Grid.Row="0" x:Name="XmlViewer" FontFamily="Consolas" FontSize="10pt" Text="{Binding Xaml}" />
-                    <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Right" Margin="4">
-                        <Button Click="CopyToClipboardClick" Padding="12,4" Content="{DynamicResource S.Button.CopyClipboard}" />
+                    <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="4,0">
+                        <Button Click="CopyToClipboardClick" Style="{StaticResource DarkButtonStyle}" Content="{DynamicResource S.Button.CopyClipboard}" />
                     </StackPanel>
                 </Grid>
             </TabItem>
-            <TabItem Header="SVG" Visibility="{Binding HasSvg, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <TabItem Header="SVG" Style="{StaticResource DarkTabItemStyle}" Visibility="{Binding HasSvg, Converter={StaticResource BooleanToVisibilityConverter}}">
                 <textViewer:XmlViewer FontFamily="Consolas" FontSize="10pt" Text="{Binding Svg}"/>
             </TabItem>
         </TabControl>
