feat: 匯出 UserControl XAML + 預覽視窗 + 圖示大小記憶
- 匯出功能改為 UserControl 格式，ResourceDictionary 內嵌圖片資源
  搭配 WrapPanel 排列預覽（一列 20 張、40x40、Margin=3）
- 移除匯出時的所有 InputBox 問答，只保留 SaveFileDialog
- 新增 ExportPreviewWindow，匯出後自動彈出預覽視窗
  視窗大小為螢幕工作區 75%，置中顯示
- Slider 圖示大小綁定 ViewModel 並持久化到設定檔

--- a/SvgToXaml/MainWindow.xaml
+++ b/SvgToXaml/MainWindow.xaml
@@ -127,7 +127,7 @@
                     Orientation="Horizontal"
                     SmallChange="2"
                     ToolTip="{DynamicResource S.Tooltip.IconSize}"
-                    Value="96" />
+                    Value="{Binding IconSize}" />
                 <Rectangle DockPanel.Dock="Right" Style="{StaticResource ToolBarSeparatorStyle}" />
                 <Button
                     Margin="3,0"
